<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_">
Welcome !
</string>
    <string name="find_what_y">
Find what you are looking for
</string>
    <string name="by_personal">

By personalize your account, we can help you to find what you like.
</string>
    <string name="label">
Personalize Your Account
</string>
    <string name="page_tittle">
Settings
</string>
    <string name="tittle_one">
Tittle One
</string>
    <string name="lorem_ipsum">
Lorem ipsum dolor sit amet la maryame dor sut colondeum.
</string>
    <string name="tittle_two">
Tittle Two
</string>
    <string name="label1">
Retry
</string>
    <string name="version_1_0">
Version 1.0
</string>
    <string name="subscribe_n">
Subscribe Now
</string>
    <string name="stayinspire">
#StayInspired
</string>
    <string name="cancel_anyt">
Cancel anytime without anymore charged.
</string>
    <string name="ad_free_exp">
Ad-free experience on any platform.
</string>
    <string name="read_and_li">
Read and listen to all premium books without limits.
</string>
    <string name="take_these_">
Take these all!
</string>
    <string name="john_doe">
John Doe
</string>
    <string name="view_profil">
View profile
</string>
    <string name="notificatio">
Notifications
</string>
    <string name="data_and_st">
Data and Storages
</string>
    <string name="subscriptio">
Subscription
</string>
    <string name="linked_acco">
Linked Account
</string>
    <string name="about_audib">
About Audibooks
</string>

</resources>
