<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment">

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/settings"
        android:clipToOutline="true">

        <View
            android:id="@+id/vector_5"
            android:layout_width="424dp"
            android:layout_height="3dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-3dp"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="530dp"
            android:background="@drawable/vector_2" />

        <View
            android:id="@+id/home_indica"
            android:layout_width="134dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/home_indica"
            />


        <View
            android:id="@+id/vector_2"
            android:layout_width="424dp"
            android:layout_height="3dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="93dp"
            android:background="@drawable/vector_2" />

        <View
            android:id="@+id/vector_"
            android:layout_width="424dp"
            android:layout_height="3dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="93dp"
            android:background="@drawable/vector_2" />

        <View
            android:id="@+id/vector_4"
            android:layout_width="424dp"
            android:layout_height="3dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="384dp"
            android:background="@drawable/vector_2" />

        <TextView
            android:id="@+id/page_tittle"
            android:layout_width="222dp"
            android:layout_height="24dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="55dp"
            android:gravity="center_horizontal|top"
            android:text="Settings"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/arrow_left" />

        <View
            android:id="@+id/fill_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="-4dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="547dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/buttonsetiing"
            android:text="Log out"
            android:textColor="#F77A55"


            />

        <TextView
            android:id="@+id/john_doe"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="96dp"
            android:gravity="top"
            android:text="@string/john_doe"
            android:textAppearance="@style/john_doe" />

        <TextView
            android:id="@+id/view_profil"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="127dp"
            android:layout_marginLeft="146dp"
            android:layout_marginTop="124dp"
            android:gravity="center_vertical"
            android:text="@string/view_profil"
            android:textAppearance="@style/view_profil" />

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/space" />

        <View
            android:id="@+id/space4"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="436dp"
            android:background="@drawable/space" />

        <View
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="292dp"
            android:background="@drawable/space" />

        <TextView
            android:id="@+id/notificatio"
            android:layout_width="377dp"
            android:layout_height="79dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="209dp"
            android:gravity="top"
            android:text="@string/notificatio"
            android:textAppearance="@style/notificatio" />

        <TextView
            android:id="@+id/data_and_st"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="255dp"
            android:gravity="top"
            android:text="@string/data_and_st"
            android:textAppearance="@style/data_and_st" />

        <View
            android:id="@+id/vector_3"
            android:layout_width="424dp"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-7dp"
            android:layout_marginTop="249dp"
            android:background="@drawable/vector_2" />

        <TextView
            android:id="@+id/subscriptio"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="340dp"
            android:gravity="top"
            android:text="@string/subscriptio"
            android:textAppearance="@style/subscriptio" />

        <TextView
            android:id="@+id/linked_acco"
            android:layout_width="399dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="396dp"
            android:gravity="top"
            android:text="@string/linked_acco"
            android:textAppearance="@style/linked_acco" />

        <TextView
            android:id="@+id/about_audib"
            android:layout_width="367dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="479dp"
            android:gravity="top"
            android:text="@string/about_audib"
            android:textAppearance="@style/about_audib" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header_deta"
        android:layout_width="375dp"
        android:layout_height="88dp"
        android:layout_below="@id/settings"
        android:background="@drawable/header_deta" />

    <View
        android:id="@+id/more_square"
        android:layout_width="11.35dp"
        android:layout_height="2.39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6.32dp"
        android:layout_marginTop="10.8dp"
        android:background="#00000000"
        />

</RelativeLayout>

