<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelocomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/rectangle"
        android:layout_width="375dp"
        android:layout_height="812dp"
        android:background="@drawable/rectangle" />
    <View
        android:id="@+id/background"
        android:layout_width="375dp"
        android:layout_height="812dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        />
    <View
        android:id="@+id/home_indica"
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/home_indica"
        />
    <View
        android:id="@+id/ellipse_16_"
        android:layout_width="448dp"
        android:layout_height="448dp"
        android:foreground="#0F0F29"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="-291dp"
        android:layout_marginRight="-51dp"
        android:layout_marginBottom="-224dp"
        android:background="@drawable/ellipse_16" />

    <View
        android:id="@+id/ellipse_"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-33dp"
        android:layout_marginTop="-31dp"
        android:layout_marginRight="319dp"
        android:layout_marginBottom="664dp"
        android:background="@drawable/ellipse_17" />

    <View
        android:id="@+id/ellipse_17"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="343dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="-57dp"
        android:layout_marginBottom="585dp"
        android:background="@drawable/ellipse_17" />

    <TextView
        android:id="@+id/welcome_"
        android:layout_width="87dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="204dp"
        android:gravity="top"
        android:text="@string/welcome_"
        android:textAppearance="@style/welcome_" />

    <TextView
        android:id="@+id/find_what_y"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="236dp"
        android:gravity="top"
        android:lineSpacingExtra="-14sp"
        android:text="@string/find_what_y"
        android:textAppearance="@style/find_what_y" />

    <TextView
        android:id="@+id/by_personal"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="426dp"
        android:gravity="top"
        android:text="@string/by_personal"
        android:textAppearance="@style/by_personal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="295dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="500dp"
        android:text=" personalize your " />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="572dp"
        android:background="@drawable/skip_button_background"
        android:text="Skip"
        android:textColor="@android:color/white" />
    />



</RelativeLayout>